--- a/camping/templates/camp/camp_list.html
+++ b/camping/templates/camp/camp_list.html
@@ -5,6 +5,19 @@
 {% block content %}
 
 <div>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/sun_tent.jpeg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/dog_tent.jpeg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/night_tent.jpeg" alt="Third slide">
+          </div>
+        </div>
+      </div>
     <div class="row text-center">
         <div class= "col-6">
             <h2>Find a campsite</h2>
