--- a/camping/templates/camp/base.html
+++ b/camping/templates/camp/base.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Camping</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
-<body class="m-5">
-    <header class=>
+<body class="m-5 base_body">
+    <header>
        
-        <nav>
+        <nav class="icon">
+            <img src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/tent_fire.svg" alt="camp-logo">
             <h1 class="text-center"><a href="/">Free Camping</a></h1>       
         </nav>
     </header>
