--- a/camping/templates/camp/base.html
+++ b/camping/templates/camp/base.html
@@ -6,15 +6,23 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Camping</title>
+    <link rel="stylesheet" href="{% static 'css/camp.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
 </head>
-<body class="m-5 base_body">
+<body class="m-5" >
     <header>
        
-        <nav class="icon">
-            <img src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/tent_fire.svg" alt="camp-logo">
-            <h1 class="text-center"><a href="/">Free Camping</a></h1>       
+        <nav class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/camping.png" alt="camp-logo">
+                </div>
+                <div class="col-sm">
+                    <h1 class="text-center"><a class= "text-dark text-decoration-none" href="/">Free Camping</a></h1>  
+                </div>
+            </div>
+            
+              
         </nav>
     </header>
     <div class='block'>
