--- a/camping/templates/camp/camp_list.html
+++ b/camping/templates/camp/camp_list.html
@@ -5,13 +5,13 @@
 {% block content %}
 
 <div>
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" >
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/sun_tent.jpeg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/dog_tent.jpeg" alt="Second slide">
+            <img class="d-block w-100" src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/tent_doggy.jpeg" alt="Second slide">
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/night_tent.jpeg" alt="Third slide">
@@ -27,13 +27,15 @@
             </form>   
         </div>
         <div class="col-6">
-            <h3><a href="{% url 'camp_create' %}">Add a Campsite </a></h3>
+            <button><a class ="text-decoration-none text-dark" href="{% url 'camp_create' %}">Add a Campsite </a></button>
         </div> 
        
     </div>
+   
     {% for camp in camps %}
-    <a href="{% url 'camp_detail' pk=camp.pk %}"><h2>{{ camp.name }}</h2></a> <p>{{ camp.location }}</p>
+    <a class ="text-decoration-none text-dark" href="{% url 'camp_detail' pk=camp.pk %}"><h2>{{ camp.name }}</h2></a> <p>{{ camp.location }}</p>
     {% endfor %}
+    
 
 </div>
 
