--- a/camping/templates/camp/camp_list.html
+++ b/camping/templates/camp/camp_list.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 <div>
+
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" >
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -18,23 +19,30 @@
           </div>
         </div>
       </div>
-    <div class="row text-center">
-        <div class= "col-6">
+
+      <div class="searchAdd">
+        <div class="search">
             <h2>Find a campsite</h2>
             <form action='{%url "search:search_result"%}' method='get'>
                 {%csrf_token%}
                 <input type='search' placeholder='search' name='q' />
             </form>   
         </div>
-        <div class="col-6">
+        <div class="search">
             <button><a class ="text-decoration-none text-dark" href="{% url 'camp_create' %}">Add a Campsite </a></button>
         </div> 
        
     </div>
-   
-    {% for camp in camps %}
-    <a class ="text-decoration-none text-dark" href="{% url 'camp_detail' pk=camp.pk %}"><h2>{{ camp.name }}</h2></a> <p>{{ camp.location }}</p>
-    {% endfor %}
+    <div>
+      {% for camp in camps %}
+      <div class="camps">
+        <a href="{% url 'camp_detail' pk=camp.pk %}"><h2>{{ camp.name }}-{{ camp.location}}</h2></a> 
+
+      </div>
+        
+      {% endfor %}
+    </div>
+  
     
 
 </div>
