--- a/camping/templates/camp/base.html
+++ b/camping/templates/camp/base.html
@@ -9,16 +9,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
-<body class="m-5" >
+<body>
     <header>
        
-        <nav class="container">
-            <div class="row">
-                <div class="col-sm">
+        <nav>
+            <div class="top">
+                <div>
                     <img src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/camping.png" alt="camp-logo">
                 </div>
-                <div class="col-sm">
-                    <h1 class="text-center"><a class= "text-dark text-decoration-none" href="/">Free Camping</a></h1>  
+                <div>
+                    <h1><a href="/">Free Camping</a></h1>  
                 </div>
             </div>
             
