--- a/camping/templates/camp/base.html
+++ b/camping/templates/camp/base.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="top">
                 <div>
-                    <img src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/camping.png" alt="camp-logo">
+                    <a href="/"><img src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/camping.png" alt="camp-logo"></a>
                 </div>
                 <div>
                     <h1><a href="/">Free Camping</a></h1>  
