--- a/camping/templates/camp/camp_detail.html
+++ b/camping/templates/camp/camp_detail.html
@@ -7,7 +7,7 @@
             <h1>{{ camp.name }}</h1>
             <p>Location: {{ camp.location }}</p>
             {% if camp.image %}
-                <img src="{{ camp.image.url }}" alt="{{ camp.name }}" width="30%">
+                <img src="{{ camp.image.url }}" alt="{{ camp.name }}">
             {% endif %}
         </div>
         <div class="detailBody">
