--- a/camping/static/css/camp.css
+++ b/camping/static/css/camp.css
@@ -98,3 +98,16 @@ a{
     border-bottom: black solid .1em;
     margin-bottom: 2%;
 }
+
+
+/* .carousel .carousel-item{
+    height: 30em;
+}
+
+.carousel-item img {
+    position: absolute;
+    object-fit:center;
+    top: 0;
+    left: 0;
+    min-height: 20em;
+} */
