--- a/camping/static/css/camp.css
+++ b/camping/static/css/camp.css
@@ -1,7 +1,7 @@
 body {
-    background-color: #F7C2BA!important;
+    background-color: #D2FBEB  !important;
     margin: 5% !important;
-    font-family: 'Nunito' !important;
+    font-family: 'PT Sans' !important;
 }
 
 h1, h2{
@@ -57,6 +57,7 @@ a{
 
 
 
+
 /* ###############
 #detail */
 
@@ -78,6 +79,9 @@ a{
     border: black .1em solid;
 }
 
+.campName{
+    text-align: center;
+}
 
 
 
@@ -99,14 +103,29 @@ a{
 }
 
 
-/* .carousel .carousel-item{
-    height: 30em;
+@media only screen and (min-width: 768px){
+
+
+ .detail{
+    display: grid;
+    grid-template: repeat(1, 1fr) / repeat(2, 1fr);
+    margin-top: 5%;
+ }
+
+ .detail img{
+     width: 70%;
+ }
+
+ .campDetail{
+    display: grid;
+    grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+
+ }
+
 }
 
-.carousel-item img {
-    position: absolute;
-    object-fit:center;
-    top: 0;
-    left: 0;
-    min-height: 20em;
-} */
+@media only screen and (min-width: 1200px){
+ 
+
+
+}
