--- a/camping/templates/camp/base.html
+++ b/camping/templates/camp/base.html
@@ -7,6 +7,7 @@
     <title>Camping</title>
     <link rel="stylesheet" href="{% static 'css/camp.css' %}" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Nunito:400,700i&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +15,7 @@
         <nav>
             <div class="top">
                 <div>
-                    <a href="/"><img src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/camping.png" alt="camp-logo"></a>
+                    <a href="/"><img src="https://camp-free.s3-us-west-1.amazonaws.com/media/images/travel.png" alt="camp-logo"></a>
                 </div>
                 <div>
                     <h1><a href="/">Free Camping</a></h1>  
